--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,9 +6,21 @@ name: Java CI with Maven
 on: [push]
 
 jobs:
-  build:
+  build-java-8:
     runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 8
+      uses: actions/setup-java@v3
+      with:
+        java-version: '8'
+        distribution: 'zulu'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -version; mvn -B install --file pom.xml
 
+  test-java-11:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
@@ -17,5 +29,5 @@ jobs:
         java-version: '11'
         distribution: 'zulu'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Test with Maven
+      run: mvn -version; mvn -B package --file pom.xml
