--- a/cassandra-unit/pom.xml
+++ b/cassandra-unit/pom.xml
@@ -49,10 +49,15 @@
     </build>
 
     <dependencies>
-
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${cu.junit.version}</version>
+            <!-- <scope>test</scope> -->
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <version>${cu.junit.version}</version>
         </dependency> 
         <dependency>
